got new post working and saving to db, attached stylesheet, fragment

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -20,6 +20,10 @@
             <td>Status</td>
             <td th:text="${status}"/>
         </tr>
+        <tr>
+            <td>Message</td>
+            <td th:text="${message}"/>
+        </tr>
     </table>
 </body>
 </html>
