--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Log in to Codefellowship</title>
+    <link href="/styles.css" rel="stylesheet" />
 </head>
 <body>
 <h1>Log in</h1>
 <form action="/login" method="POST">
-    Username <input name="username" />
-    Password <input name="password" />
+    Username <input name="username" required />
+    Password <input name="password" required />
     <input type="submit" />
 </form>
 <p>Use this <a th:href="@{/signup}">link</a> to sign up for a Codefellowship account.
