--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,9 +1,67 @@
 @import url('https://fonts.googleapis.com/css?family=Boogaloo|Mali|Neucha|News+Cycle&display=swap');
-h1 {
+
+
+
+/*margins*/
+body {
+    margin: 5% 8%;
+}
+
+.red {
+    color: red;
+}
+
+/*elements*/
+h1, a {
     font-family: 'Mali', 'News Cycle', sans-serif, 'Neucha', 'Boogaloo', cursive, 'Comic Sans MS', arial, helvetica;
 
 }
 
+h2, h3, h4 {
+    font-family: 'Neucha', 'Boogaloo', cursive, 'Comic Sans MS', arial, helvetica;
+}
+
+p, span {
+    font-family: 'News Cycle', sans-serif, 'Neucha', 'Boogaloo', cursive, 'Comic Sans MS', arial, helvetica;
+}
+
+li {
+
+}
+
+a {
+    /*font-family: 'Boogaloo', cursive, 'Comic Sans MS', arial, helvetica;*/
+    text-decoration: none;
+    color: blue;
+}
+
+a:visited {
+    /*font-family: 'Boogaloo', cursive, 'Comic Sans MS', arial, helvetica;*/
+    font-size: 14px;
+    color: green;
+}
+
+input, textarea {
+    font-family: 'News Cycle', sans-serif, 'Neucha', 'Boogaloo', cursive, 'Comic Sans MS', arial, helvetica;
+    font-size: 14px;
+    padding: 10px 5px;
+    margin: 5px;
+    border-radius: 5px 10px;
+}
+
+input[type=submit] {
+    width: 100px;
+    border-radius: 10px;
+    background-color: #d5e0f2;
+    font-family: 'News Cycle', sans-serif, 'Neucha', 'Boogaloo', cursive, 'Comic Sans MS', arial, helvetica;
+    font-size: 16px;
+    transition: ease-in-out, width .35s ease-in-out;
+}
+
 .nav {
     color: navy;
+}
+
+.nav a {
+    margin-right: 50px;
 }
