--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,10 +6,12 @@
     <link href="/styles.css" rel="stylesheet" />
 </head>
 <body>
+<div th:replace="fragments/header :: notPermitted">...</div>
+
 <h1>Log in</h1>
 <form action="/login" method="POST">
-    Username <input name="username" required />
-    Password <input name="password" required />
+    <span>Username </span><input name="username" required />
+    <span>Password </span><input name="password" required />
     <input type="submit" />
 </form>
 <p>Use this <a th:href="@{/signup}">link</a> to sign up for a Codefellowship account.
