--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,3 +5,11 @@
         <a href="/potato">Log out</a>
     </nav>
 </header>
+
+<header class="nav" th:fragment="notPermitted" xmlns:th="http://www.springframework.org/schema/security">
+    <nav>
+        <a href="/">Home</a>
+        <a href="/signup">Make New Account</a>
+        <a href="/login">Existing User</a>
+    </nav>
+</header>
