routes complete - need to show feed page and not show button when already added

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
     <nav>
         <a href="/post">Create a Post</a>
         <a href="/myprofile">My Profile</a>
+        <a href="/feed">My Feed</a>
         <a href="/potato">Log out</a>
     </nav>
 </header>
