--- a/src/main/resources/templates/myprofile.html
+++ b/src/main/resources/templates/myprofile.html
@@ -9,9 +9,16 @@
 <body>
 <div th:replace="fragments/header :: blueberry">...</div>
 
-<h1>Hi <span th:text="${principal.name}"></span></h1>
+<div th:if="${principal == false}">
+    <form action="#" th:action="@{/add/} + ${currentUser.username}" method="POST">
 
-<h3>Your Profile:</h3>
+    <input type="submit" value="Follow" class="followButton">
+    </form>
+</div>
+
+<h1>Profile of <span th:text="${currentUser.username}"></span></h1>
+
+<h3>Stats:</h3>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdl1rmeMz-SG_9GroHp8ytiXUCEhNHoAjQ6w-Kz1ZajI6JEmI_" height="200px" width="200px"/>
     <p>Username: <span th:text="${currentUser.username}"/></p>
     <p>First Name: <span th:text="${currentUser.firstName}"/></p>
@@ -20,7 +27,7 @@
     <p>Bio: <span th:text="${currentUser.bio}"/></p>
     <br/>
     <h3>Your Posts</h3>
-    <span th:text="${#lists.size(currentUser.posts)} != 0? '': 'You do not have any posts.'"></span>
+    <span th:text="${#lists.size(currentUser.posts)} != 0? '': 'There are no posts.'"></span>
 
     <ul>
         <li th:each="post : ${currentUser.posts}">
@@ -30,5 +37,19 @@
             <!--</a>-->
         </li>
     </ul>
+<!--<div th:if="${!principal.isEmpty}"> TODO FIX THIS SO IT DOESNT SHOW ON NONPRINCIPAL PAGES-->
+<h3 th:if="${principal}">All Users:</h3>
+    <ul>
+        <li th:each="user : ${allUsers}">
+            <!--<a th:href="'/dinosaurs/' + ${dino.id}">-->
+            <p>User: <span th:text="${user.firstName}"></span>, with username <span th:text="${user.username}"></span></p>
+            <a th:href="@{/myprofile/} + ${user.username}">See Profile</a>
+            <!--</a>-->
+        </li>
+    </ul>
+<div th:if="${principal}">
+
+</div>
+
 </body>
 </html>
